# acr-sample

./: .dockerignore  .env.sample  .gitignore  AGENTS.md  Dockerfile  README.md  app_creation_output.json  pyproject.toml
.github/workflows/: deploy.yml
infra/: README.md
infra/bicep/: .bicepignore  README.md  main.bicep  main.bicepparam  main.json  resources.bicep
infra/bicep/modules/: container-app-environment.bicep  container-app.bicep  container-registry.bicep  log-analytics.bicep
infra/terraform/: main.tf
myproject/: settings.py  urls.py
script/: bootstrap  deploy  docker-build  docker-push  docker-server  docker-stop  launch  server
