[project]
name = "acr-sample"
version = "0.1.0"
description = "Django application for Azure Container Registry deployment"
requires-python = "==3.13.7"
dependencies = [
    "django>=5.1.5",
    "gunicorn>=23.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["myproject"]

[tool.uv]
